--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                         <h2 class="main_section5_para1 fs_xs_27px fs_xl_24px text_width_276px">1.&nbsp;Request a free
                             estimate</h2>
                         <div class="image_box_xs image_box position-relative ">
-                            <img class="w-100" src="./assets/images/section5_image1.png" alt="section5_image1">
+                            <img  class="w-100 section5_round_image" src="./assets/images/section5_image1.png" alt="section5_image1">
                             <img class="d-none d-lg-block section5_image3 "
                                 src="./assets/images/section5_line_image.png" alt="section5_line_image">
                         </div>
@@ -222,7 +222,7 @@
                         <h2 class="main_section5_para1 fs_xs_27px fs_xl_24px text_width_194px">2.&nbsp; Schedule Your
                             Service</h2>
                         <div class="image_box_xs image_box position-relative order-lg-first">
-                            <img class="w-100" src="./assets/images/section5_image2.png" alt="section5_image2">
+                            <img class="w-100 section5_round_image" src="./assets/images/section5_image2.png" alt="section5_image2">
                             <img class="d-none d-lg-block section5_image2 "
                                 src="./assets/images/section5_line_image.png" alt="section5_line_image">
                         </div>
@@ -233,7 +233,7 @@
                             Work
                         </h2>
                         <div class="image_box_xs image_box position-relative">
-                            <img class="w-100" src="./assets/images/section5_image3.png" alt="section5_image3">
+                            <img class="w-100 section5_round_image" src="./assets/images/section5_image3.png" alt="section5_image3">
                             <img class="d-none d-lg-block section5_image3 "
                                 src="./assets/images/section5_line_image.png" alt="section5_line_image">
                         </div>
@@ -243,7 +243,7 @@
                         <h2 class="main_section5_para1 fs_xs_27px fs_xl_24px text_width_194px">4.&nbsp; The Paint Magic
                             Begins</h2>
                         <div class="image_box_xs image_box position-relative order-lg-first">
-                            <img class="w-100" src="./assets/images/section5_image4.png" alt="section5_image4">
+                            <img class="w-100 section5_round_image" src="./assets/images/section5_image4.png" alt="section5_image4">
                             <img class="d-none d-lg-block section5_image2 "
                                 src="./assets/images/section5_line_image.png" alt="section5_line_image">
                         </div>
@@ -254,7 +254,7 @@
                             Up
                         </h2>
                         <div class="image_box_xs image_box position-relative">
-                            <img class="w-100" src="./assets/images/section5_image5.png" alt="section5_image5">
+                            <img class="w-100 section5_round_image" src="./assets/images/section5_image5.png" alt="section5_image5">
                             <img class="d-none d-lg-block section5_image3 "
                                 src="./assets/images/section5_line_image.png" alt="section5_line_image">
                         </div>
@@ -265,7 +265,7 @@
                             Inspection
                         </h2>
                         <div class="image_box_xs image_box position-relative order-lg-first">
-                            <img class="w-100" src="./assets/images/section5_image6.png" alt="section5_image6">
+                            <img class="w-100 section5_round_image" src="./assets/images/section5_image6.png" alt="section5_image6">
                             <img class="d-none d-lg-block section5_image2 "
                                 src="./assets/images/section5_line_image.png" alt="section5_line_image">
                         </div>
@@ -276,7 +276,7 @@
                             Newly
                             Painted Space!</h2>
                         <div class="image_box_xs image_box">
-                            <img class="w-100" src="./assets/images/section5_image7.png" alt="section5_image7">
+                            <img class="w-100 section5_round_image" src="./assets/images/section5_image7.png" alt="section5_image7">
                         </div>
                     </div>
                 </div>
@@ -301,7 +301,7 @@
                         <img class="z_index_1 d-none d-lg-block" src="./assets/images/section6_image_yellow_paint.png"
                             alt="section6_image_yellow_paint">
                     </div>
-                    <div class="col-12 mt-4 col-lg-6"><img class="w-100" src="./assets/images/section6_image.png"
+                    <div class="col-12 mt-4 col-lg-6 section6box "><img class="w-100 "  src="./assets/images/section6_image.png"
                             alt="section6_image"></div>
                 </div>
 
@@ -332,7 +332,7 @@
             <div class="pt_lg_115px pb_lg_115px">
                 <div class="container">
                     <div class="row">
-                        <div class="col-12 mt-4 col-lg-6"><img class="w-100" src="./assets/images/section7_image.png"
+                        <div class="col-12 mt-4 col-lg-6 section6box"><img class="w-100" src="./assets/images/section7_image.png"
                                 alt="section7_image"></div>
                         <div class="col-12 col-lg-6">
                             <img class="d-none d-lg-block" src="./assets/images/section7_color_image.png"
@@ -372,7 +372,7 @@
                         <img class=" d-none d-lg-block " src="./assets/images/section8_color_image.png"
                             alt="section8_color_image">
                     </div>
-                    <div class="col-12 mt-4 col-lg-6"><img class="w-100" src="./assets/images/section8_image.png"
+                    <div class="col-12 mt-4 col-lg-6 section6box"><img class="w-100" src="./assets/images/section8_image.png"
                             alt="section8_image">
                     </div>
                 </div>
@@ -521,15 +521,15 @@
                 <div>
      
                     <div class="row flex-column flex-lg-row align-items-center">
-                        <div class="col-12 col-sm-4 d-flex flex-column align-items-center py-3"><img src="./assets/images/section11_image1.png" alt="section11_image1">
+                        <div class="col-12 col-sm-4 d-flex flex-column align-items-center py-3  section6box"><img src="./assets/images/section11_image1.png" alt="section11_image1">
                         <p class="section11_para1 mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <h2 class="section11_para2 mb-0">Diane Moreno</h2>
                         </div>
-                        <div class="col-12 col-sm-4 d-flex flex-column align-items-center py-3"><img src="./assets/images/section11_image2.png" alt="section11_image2">
+                        <div class="col-12 col-sm-4 d-flex flex-column align-items-center py-3 section6box"><img src="./assets/images/section11_image2.png" alt="section11_image2">
                         <p class="section11_para1 mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <h2 class="section11_para2 mb-0">Max Stoiber</h2>
                         </div>
-                        <div class="col-12 col-sm-4 d-flex flex-column align-items-center py-3"><img src="./assets/images/section11_image3.png" alt="section11_image3">
+                        <div class="col-12 col-sm-4 d-flex flex-column align-items-center py-3 section6box"><img src="./assets/images/section11_image3.png" alt="section11_image3">
                         <p class="section11_para1 mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <h2 class="section11_para2 mb-0">Laurie Laforest</h2>
                         </div>
