--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Project 11</title>
+    <title>Project 12</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="./assets/images/deco_master.png" type="image/x-icon">
     <link rel="shortcut icon" href="./assets/images/deco_master.png" type="image/x-icon">
@@ -116,21 +116,10 @@
             </div>
             <div class="container_xxl">
                 <div class="d-grid h-100">
-                    <div class="grid_item1 h-100 overflow-hidden"><img class="w-100 grid_image"
-                            src="./assets/images/section3_image1.png" alt="section3_image1"></div>
-                    <div class="grid_item2 h-100 overflow-hidden"><img class="w-100 grid_image"
-                            src="./assets/images/section3_image2.png" alt="section3_image2"></div>
-                    <div class="grid_item3 h-100 overflow-hidden"><img class="w-100 grid_image"
-                            src="./assets/images/section3_image3.png" alt="section3_image3"></div>
-                    <div class="grid_item4 h-100 overflow-hidden"><img class="w-100 grid_image"
-                            src="./assets/images/section3_image4.png" alt="section3_image4"></div>
-                    <div class="grid_item5 h-100 overflow-hidden"><img class="w-100 grid_image"
-                            src="./assets/images/section3_image5.png" alt="section3_image5"></div>
-                    <div class="grid_item6 h-100 overflow-hidden"><img class="w-100 grid_image"
-                            src="./assets/images/section3_image6.png" alt="section3_image6"></div>
-                    <div class="grid_item7 position-relative  overflow-hidden"><img class="w-100 grid_image"
-                            src="./assets/images/section3_image7.png" alt="section3_image7">
-                        <div class="box_gradient d-flex flex-column justify-content-center align-items-center">
+                    <div class="grid_item1 position-relative h-100 overflow-hidden"><img class="w-100 grid_image"
+                            src="./assets/images/section3_image1.png" alt="section3_image1">
+                         <div class="gradient_hover">
+                        <div class="box_gradient  d-flex flex-column justify-content-center align-items-center">
                             <h2 class="fs_xs_24px fs_md_21px section3_para1 pb_lg_10px pb_lg_16px m-0">DECONSTRUCTION
                             </h2>
                             <h2 class="fs_xs_13px fs_md_11px  section3_para2 pb_lg_10px pb_lg_28px m-0">Digital Paint,
@@ -141,9 +130,114 @@
                                 <img class="ml_15 mb-0" src="./assets/images/chaib_icon.svg" alt="chaib_icon">
                             </div>
                         </div>
+                       </div></div>
+                    <div class="grid_item2 position-relative h-100 overflow-hidden"><img class="w-100 grid_image"
+                            src="./assets/images/section3_image2.png" alt="section3_image2">
+                         <div class="gradient_hover">
+                        <div class="box_gradient  d-flex flex-column justify-content-center align-items-center">
+                            <h2 class="fs_xs_24px fs_md_21px section3_para1 pb_lg_10px pb_lg_16px m-0">DECONSTRUCTION
+                            </h2>
+                            <h2 class="fs_xs_13px fs_md_11px  section3_para2 pb_lg_10px pb_lg_28px m-0">Digital Paint,
+                                Painting,
+                                Realism</h2>
+                            <div>
+                                <img src="./assets/images/plus_icon.svg" alt="plus_icon">
+                                <img class="ml_15 mb-0" src="./assets/images/chaib_icon.svg" alt="chaib_icon">
+                            </div>
+                        </div>
+                       </div></div>
+                    <div class="grid_item3 position-relative h-100 overflow-hidden"><img class="w-100 grid_image"
+                            src="./assets/images/section3_image3.png" alt="section3_image3">
+                         <div class="gradient_hover">
+                        <div class="box_gradient  d-flex flex-column justify-content-center align-items-center">
+                            <h2 class="fs_xs_24px fs_md_21px section3_para1 pb_lg_10px pb_lg_16px m-0">DECONSTRUCTION
+                            </h2>
+                            <h2 class="fs_xs_13px fs_md_11px  section3_para2 pb_lg_10px pb_lg_28px m-0">Digital Paint,
+                                Painting,
+                                Realism</h2>
+                            <div>
+                                <img src="./assets/images/plus_icon.svg" alt="plus_icon">
+                                <img class="ml_15 mb-0" src="./assets/images/chaib_icon.svg" alt="chaib_icon">
+                            </div>
+                        </div>
+                       </div></div>
+                    <div class="grid_item4 position-relative h-100 overflow-hidden"><img class="w-100 grid_image"
+                            src="./assets/images/section3_image4.png" alt="section3_image4">
+                         <div class="gradient_hover">
+                        <div class="box_gradient  d-flex flex-column justify-content-center align-items-center">
+                            <h2 class="fs_xs_24px fs_md_21px section3_para1 pb_lg_10px pb_lg_16px m-0">DECONSTRUCTION
+                            </h2>
+                            <h2 class="fs_xs_13px fs_md_11px  section3_para2 pb_lg_10px pb_lg_28px m-0">Digital Paint,
+                                Painting,
+                                Realism</h2>
+                            <div>
+                                <img src="./assets/images/plus_icon.svg" alt="plus_icon">
+                                <img class="ml_15 mb-0" src="./assets/images/chaib_icon.svg" alt="chaib_icon">
+                            </div>
+                        </div>
+                       </div></div>
+                    <div class="grid_item5 position-relative h-100 overflow-hidden"><img class="w-100 grid_image"
+                            src="./assets/images/section3_image5.png" alt="section3_image5">
+                         <div class="gradient_hover">
+                        <div class="box_gradient  d-flex flex-column justify-content-center align-items-center">
+                            <h2 class="fs_xs_24px fs_md_21px section3_para1 pb_lg_10px pb_lg_16px m-0">DECONSTRUCTION
+                            </h2>
+                            <h2 class="fs_xs_13px fs_md_11px  section3_para2 pb_lg_10px pb_lg_28px m-0">Digital Paint,
+                                Painting,
+                                Realism</h2>
+                            <div>
+                                <img src="./assets/images/plus_icon.svg" alt="plus_icon">
+                                <img class="ml_15 mb-0" src="./assets/images/chaib_icon.svg" alt="chaib_icon">
+                            </div>
+                        </div>
+                       </div></div>
+                    <div class="grid_item6 position-relative h-100 overflow-hidden"><img class="w-100 grid_image"
+                            src="./assets/images/section3_image6.png" alt="section3_image6">
+                         <div class="gradient_hover">
+                        <div class="box_gradient  d-flex flex-column justify-content-center align-items-center">
+                            <h2 class="fs_xs_24px fs_md_21px section3_para1 pb_lg_10px pb_lg_16px m-0">DECONSTRUCTION
+                            </h2>
+                            <h2 class="fs_xs_13px fs_md_11px  section3_para2 pb_lg_10px pb_lg_28px m-0">Digital Paint,
+                                Painting,
+                                Realism</h2>
+                            <div>
+                                <img src="./assets/images/plus_icon.svg" alt="plus_icon">
+                                <img class="ml_15 mb-0" src="./assets/images/chaib_icon.svg" alt="chaib_icon">
+                            </div>
+                        </div>
+                       </div></div>
+                    <div class="grid_item7 position-relative  overflow-hidden"><img class="w-100 grid_image"
+                            src="./assets/images/section3_image7.png" alt="section3_image7">
+
+                       <div class="gradient_hover">
+                        <div class="box_gradient  d-flex flex-column justify-content-center align-items-center">
+                            <h2 class="fs_xs_24px fs_md_21px section3_para1 pb_lg_10px pb_lg_16px m-0">DECONSTRUCTION
+                            </h2>
+                            <h2 class="fs_xs_13px fs_md_11px  section3_para2 pb_lg_10px pb_lg_28px m-0">Digital Paint,
+                                Painting,
+                                Realism</h2>
+                            <div>
+                                <img src="./assets/images/plus_icon.svg" alt="plus_icon">
+                                <img class="ml_15 mb-0" src="./assets/images/chaib_icon.svg" alt="chaib_icon">
+                            </div>
+                        </div>
+                       </div>
                     </div>
-                    <div class="grid_item8 overflow-hidden"><img class="w-100 grid_image"
-                            src="./assets/images/section3_image8.png" alt="section3_image8"></div>
+                    <div class="grid_item8 position-relative overflow-hidden"><img class="w-100 grid_image"
+                            src="./assets/images/section3_image8.png" alt="section3_image8">
+                         <div class="gradient_hover">
+                        <div class="box_gradient  d-flex flex-column justify-content-center align-items-center">
+                            <h2 class="fs_xs_24px fs_md_21px section3_para1 pb_lg_10px pb_lg_16px m-0">DECONSTRUCTION
+                            </h2>
+                            <h2 class="fs_xs_13px fs_md_11px  section3_para2 pb_lg_10px pb_lg_28px m-0">Digital Paint,
+                                Painting,
+                                Realism</h2>
+                            <div>
+                                <img src="./assets/images/plus_icon.svg" alt="plus_icon">
+                                <img class="ml_15 mb-0" src="./assets/images/chaib_icon.svg" alt="chaib_icon">
+                            </div>
+                        </div>
+                       </div></div>
                 </div>
             </div>
 
